src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>HierarchyGroup__c</fullName>
        <formula>IF(ISBLANK(ParentId), &quot;&quot;,
IF(ISBLANK(Parent.ParentId), ParentId,
IF(ISBLANK(Parent.Parent.ParentId), Parent.ParentId,
IF(ISBLANK(Parent.Parent.Parent.ParentId), Parent.Parent.ParentId,
IF(ISBLANK(Parent.Parent.Parent.Parent.ParentId), Parent.Parent.Parent.ParentId,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId), Parent.Parent.Parent.Parent.ParentId,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.ParentId), Parent.Parent.Parent.Parent.Parent.ParentId,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId), Parent.Parent.Parent.Parent.Parent.Parent.ParentId, Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HispanicPatients__c</fullName>
        <description>% of patients that are Hispanic</description>
        <label>Hispanic</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HivAids__c</fullName>
        <label>HIV/AIDs</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HoldingCompany__c</fullName>
        <description>Used to track the holding company for an agency account.</description>
        <label>Holding Company</label>
        <picklist>
            <picklistValues>
                <fullName>Aegis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omnicom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HospitalAffiliation__c</fullName>
        <label>Hospital Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hypertension__c</fullName>
        <description>% of patients being treated for Hyptertension</description>
        <label>Hypertension</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPAddress2__c</fullName>
        <label>IP Address #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Phone_and_Email__c</fullName>
        <label>IT Phone and Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IdGenerator__c</fullName>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Init_touch_Date__c</fullName>
        <label>Touch Point Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstallationException2__c</fullName>
        <inlineHelpText>Use this field if the installation was approved with one of the listed exceptions.  (Field created Feb 2011)</inlineHelpText>
        <label>Installation Exception2</label>
        <picklist>
            <picklistValues>
                <fullName>WR Installation - Antenna/Cable Plugged into Our TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR Installation - Cable TV in Same Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR Installation - Competitor Media in Same Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Installation Only - No other media at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Installation Only - Competitor media in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Installation Only - Cable TV in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Installation Only - No other media at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Installation Only - Competitor media in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Installation Only - Cable TV in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room Installation Only - No other media at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room Installation Only - Competitor media in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room Installation Only - Cable TV in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In All Waiting Rooms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InstallationException__c</fullName>
        <inlineHelpText>Use this field if the installation was approved with one of the listed exceptions.  (Field created Feb 2011)</inlineHelpText>
        <label>Installation Exception</label>
        <picklist>
            <picklistValues>
                <fullName>WR Installation - Antenna/Cable Plugged into Our TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR Installation - Cable TV in Same Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR Installation - Competitor Media in Same Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR - Temporary Competitor in Same Room (follow up required for removal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Installation Only - No other media at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Installation Only - Competitor media in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion Room Installation Only - Cable TV in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Installation Only - No other media at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Installation Only - Competitor media in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Room Installation Only - Cable TV in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room Installation Only - No other media at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room Installation Only - Competitor media in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room Installation Only - Cable TV in WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In All Waiting Rooms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InteractiveAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interactive Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Interactive Agency)</relationshipLabel>
        <relationshipName>Accounts7_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interested_in_Tech_Communities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Office is willing to participate in new product demo&apos;s, being part of beta/alpha, etc etc</inlineHelpText>
        <label>Interested in Tech Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternetReimbursement__c</fullName>
        <label>Internet Reimbursement</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internet_In_Facility__c</fullName>
        <label>Internet In Facility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>J_V__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>J/V</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (J/V)</relationshipLabel>
        <relationshipName>Accounts9_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KensingtonLockSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kensington Lock System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_Captive_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Site has SSID with a captive portal</description>
        <label>Known Captive Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadBackfill__c</fullName>
        <label>Lead Backfill</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadCategory__c</fullName>
        <label>Lead Category</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics and Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optometry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>$250 RHN Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$300 RHN Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012_DHN_E-blast_#1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACE 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACE - 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACE 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACE 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACE 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACE - PCP - Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AADE 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AADE-2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AADE - 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AADE - 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AADE 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAN 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAN Fall 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACG 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACG - Las Vegas - 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR AM 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR Annual Meeting 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR Member Directory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR SOTA 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR SOTA 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR SOTA 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR Website February 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADA_2012</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lightning_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lightning Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocatedinHospital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Located in Hospital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LungCancer__c</fullName>
        <description>% of patients being treated for Lung Cancer</description>
        <label>Lung Cancer</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAC_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MENumber__c</fullName>
        <label>ME Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIA_Tendencies__c</fullName>
        <label>MIA Tendencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this company have stop codes/mail codes?</description>
        <inlineHelpText>Does this company have stop codes/mail codes?</inlineHelpText>
        <label>Mail Stop Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <description>% of patients that are Male</description>
        <label>Male</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MediaPlanningAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Planning Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Media Planning Agency)</relationshipLabel>
        <relationshipName>Accounts3_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Buying_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Buying Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Media Buying Agency)</relationshipLabel>
        <relationshipName>Accounts5_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medicare__c</fullName>
        <description>% of patients using Medicare</description>
        <label>Medicare</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Melanoma__c</fullName>
        <description>% of patients being treated for Melanoma</description>
        <label>Melanoma</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MemberRating__c</fullName>
        <label>Member Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migraine__c</fullName>
        <description>% of patients being treated for Migraine</description>
        <label>Migraine</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_product_approved_by_BK_DC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Multi-product approved by BK/DC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultipleSclerosis__c</fullName>
        <description>% of patients being treated for Multiple Sclerosis</description>
        <label>Multiple Sclerosis</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_KM_Field__c</fullName>
        <label>My KM Field</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NetworkDeploymentSpecialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network Deployment Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Affiliation__c</fullName>
        <label>Network Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Banner__c</fullName>
        <label>Network Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Deployment_Screen__c</fullName>
        <label>Network Deployment - Tablets</label>
        <picklist>
            <picklistValues>
                <fullName>WiFi - Site - Their Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - Site w/ CM AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - Site w/ CM Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - Cicat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Deployment__c</fullName>
        <label>Network Deployment - Screen</label>
        <picklist>
            <picklistValues>
                <fullName>WiFi - Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cicat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Health_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network Health Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>Used to denote the requested content that a clinic would get if it were to become a member. Formerly known as &quot;Network&quot;.</description>
        <label>Content Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics and Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optometry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Next_touch_point_date1__c</fullName>
        <label>Next touch point date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any notes on this account that need to stay right on top</description>
        <inlineHelpText>Please use this field to enter any new/recent notes on the account. Any non-current information can be entered into the Notes &amp; Attachment area.</inlineHelpText>
        <label>Notes for OBD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Exam_Rooms__c</fullName>
        <label># of Exam Rooms BS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfExamRooms__c</fullName>
        <label># of Exam Rooms</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPatientsPerWeek__c</fullName>
        <label># of Patients Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfQualifiedWaitingRooms__c</fullName>
        <label># of Qualified Waiting Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfScreensInstalled__c</fullName>
        <label># of Screens Installed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfTabletsInstalled__c</fullName>
        <label># of Tablets Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfTabletsSold__c</fullName>
        <label># of Tablets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCLastUpdate__c</fullName>
        <label>O.C. Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCNotes__c</fullName>
        <label>O.C. Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OFFSET_DST_c__c</fullName>
        <formula>DMA_Zip_Code__r.OFFSET_DST__c</formula>
        <label>OFFSET_DST_c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OOH Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (OOH Account)</relationshipLabel>
        <relationshipName>Accounts2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_Agency_temp__c</fullName>
        <inlineHelpText>The agency that the sponsor client uses for its OOH media buys</inlineHelpText>
        <label>OOH Agency_temp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>